@@ -27,6 +27,8 @@
 <!ATTLIST database user CDATA #IMPLIED>
 <!ATTLIST database password CDATA #IMPLIED>
 <!ATTLIST database url CDATA #IMPLIED>
+<!ATTLIST database driver CDATA #IMPLIED>
+<!ATTLIST database schema CDATA #IMPLIED>
 
 <!ELEMENT entity (scalar*,row*,rowset*,action*,constraint*)>
 
